Revert "chore: Use ubuntu-20.04 runner (#6)"
This reverts commit e3bd1d5b07fd5901b67da3fffdf563b86e3e6ac9.

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,7 +10,7 @@ env:
 
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-20.04
+    runs-on: self-hosted
     strategy:
       matrix:
         distro:
